--- a/week2.ipynb
+++ b/week2.ipynb
@@ -796,7 +796,7 @@
     "    r_accList.append(r_accuracy)\n",
     "    print(f\"epoch: {epoch} の学習終了\")\n",
     "\n",
-    "print(r_epochList)\n",
+    "print(epochList)\n",
     "print(r_lossList)\n",
     "print(r_accList)"
    ]
