--- a/week3.ipynb
+++ b/week3.ipynb
@@ -458,23 +458,24 @@
     "            print(\"{} Epoch {}, Training loss {:2f}\".format(\n",
     "                                                        datetime.datetime.now(),\n",
     "                                                        epoch, \n",
-    "                                                        loss_train/len(train_loader)))"
+    "                                                        loss_train/len(train_loader)))\n",
+    "    return loss_train/len(train_loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'aaa' is not defined",
+     "evalue": "name 'Net' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m transforms\n\u001b[1;32m      5\u001b[0m image_size \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m32\u001b[39m\n\u001b[0;32m----> 6\u001b[0m mean \u001b[38;5;241m=\u001b[39m (\u001b[43maaa\u001b[49m, bbb, ccc)\n\u001b[1;32m      7\u001b[0m std \u001b[38;5;241m=\u001b[39m (ddd, eee, fff)\n\u001b[1;32m      8\u001b[0m train_image_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./data/train\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'aaa' is not defined"
+      "Cell \u001b[0;32mIn[1], line 34\u001b[0m\n\u001b[1;32m     25\u001b[0m val_dataset \u001b[38;5;241m=\u001b[39m torchvision\u001b[38;5;241m.\u001b[39mdatasets\u001b[38;5;241m.\u001b[39mImageFolder(\n\u001b[1;32m     26\u001b[0m                                         root\u001b[38;5;241m=\u001b[39mval_image_dir,\n\u001b[1;32m     27\u001b[0m                                         transform\u001b[38;5;241m=\u001b[39mdata_transfrom[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mval\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     29\u001b[0m train_loader \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mDataLoader(\n\u001b[1;32m     30\u001b[0m                                     train_dataset,\n\u001b[1;32m     31\u001b[0m                                     batch_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m,\n\u001b[1;32m     32\u001b[0m                                     shuffle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m---> 34\u001b[0m model \u001b[38;5;241m=\u001b[39m \u001b[43mNet\u001b[49m()\u001b[38;5;241m.\u001b[39mto(device \u001b[38;5;241m=\u001b[39m device)\n\u001b[1;32m     35\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mSGD(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1e-2\u001b[39m)\n\u001b[1;32m     36\u001b[0m loss_fn \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mCrossEntropyLoss()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Net' is not defined"
      ]
     }
    ],
@@ -486,8 +487,8 @@
     "from torchvision import transforms\n",
     "\n",
     "image_size = 32\n",
-    "mean = (aaa, bbb, ccc)\n",
-    "std = (ddd, eee, fff)\n",
+    "mean = (0.5025, 0.4662, 0.4293)\n",
+    "std = (0.2446, 0.2340, 0.2356)\n",
     "train_image_dir = \"./data/train\"\n",
     "val_image_dir = \"./data/val\"\n",
     "\n",
@@ -513,11 +514,11 @@
     "                                    shuffle=True)\n",
     "\n",
     "model = Net().to(device = device)\n",
-    "optimeizer = torch.optim.SGD(model.parameters(), lr=1e-2)\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=1e-2)\n",
     "loss_fn = nn.CrossEntropyLoss()\n",
     "\n",
     "training_loop(n_epochs=10,\n",
-    "              optimizer=optimeizer,\n",
+    "              optimizer=optimizer,\n",
     "              model=model,\n",
     "              loss_fn=loss_fn,\n",
     "              train_loader=train_loader)\n"
@@ -611,7 +612,11 @@
    "outputs": [],
    "source": [
     "# NetWidht()の学習(epoch=10, 20, 30)\n",
-    "# Resarch about value of loss function, train_acc and val_acc."
+    "# Resarch about value of loss function, train_acc and val_acc.\n",
+    "\n",
+    "NetW_e10 = training_loop(10, optimizer, NetWidth(), loss_fn, train_loader)\n",
+    "NetW_e20 = training_loop(20, optimizer, NetWidth(), loss_fn, train_loader)\n",
+    "NetW_e30 = training_loop(30, optimizer, NetWidth(), loss_fn, train_loader)"
    ]
   },
   {
@@ -642,15 +647,16 @@
     "            l2_norm = sum(p.pow(2.0).sum() for p in model.parameters())\n",
     "            loss = loss + l2_lambda * l2_norm\n",
     "            # -- l2reg --\n",
-    "            optimeizer.zero_grad()\n",
+    "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            loss_train += loss.item()\n",
     "        if epoch == 1 or epoch % 10 == 0:\n",
-    "            porint(\"{} Epoch {}, Training loss {:2f}\".format(\n",
+    "            print(\"{} Epoch {}, Training loss {:2f}\".format(\n",
     "                                                        datetime.datetime.now(),\n",
     "                                                        epoch,\n",
-    "                                                        loss_train/len(train_loader)))"
+    "                                                        loss_train/len(train_loader)))\n",
+    "    return loss_train/len(train_loader)"
    ]
   },
   {
@@ -660,7 +666,39 @@
    "outputs": [],
    "source": [
     "# Net(), NetWidht()をcode18を使用してが学習(epoch=30)\n",
-    "# Resarch about effect of L2 normalization\n"
+    "# Resarch about effect of L2 normalization\n",
+    "\n",
+    "Net_l2_acc = training_loop_l2reg(30, optimizer, Net(), loss_fn, train_loader)\n",
+    "NetWidth_l2_acc = training_loop_l2reg(30, optimizer, NetWidth(), loss_fn, train_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Net_l2_acc' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      4\u001b[0m models \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNet\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNetWidth\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m----> 5\u001b[0m accuracy \u001b[38;5;241m=\u001b[39m [\u001b[43mNet_l2_acc\u001b[49m, NetWidth_l2_acc]\n\u001b[1;32m      6\u001b[0m plt\u001b[38;5;241m.\u001b[39mbar(models, accuracy, color\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m      7\u001b[0m plt\u001b[38;5;241m.\u001b[39mylabel(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAccuracy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Net_l2_acc' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "models = [\"Net\", \"NetWidth\"]\n",
+    "accuracy = [Net_l2_acc, NetWidth_l2_acc]\n",
+    "plt.bar(models, accuracy, color=[\"r\", \"b\"])\n",
+    "plt.ylabel(\"Accuracy\")\n",
+    "plt.ylim(0, 1.0)\n",
+    "plt.show()"
    ]
   },
   {
@@ -677,6 +715,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# code19\n",
     "class NetDropout(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -711,7 +750,9 @@
    "source": [
     "# NetDropout()の学習(epoch=30)\n",
     "# use training_loop() from code14\n",
-    "# Resarch about Accuracy"
+    "# Resarch about Accuracy\n",
+    "\n",
+    "NetDropout_acc = training_loop(30, optimizer, NetDropout(), loss_fn, train_loader)"
    ]
   },
   {
@@ -762,7 +803,9 @@
    "source": [
     "# NetBatchNorm()の学習(epoch=30)\n",
     "# use training_loop() from code14\n",
-    "# Resarch about Accuracy"
+    "# Resarch about Accuracy\n",
+    "\n",
+    "NetBatchNorm_acc = training_loop(30, optimizer, NetBatchNorm(), loss_fn, train_loader)"
    ]
   },
   {
@@ -813,7 +856,9 @@
    "source": [
     "# NetDepth()の学習(epoch=30)\n",
     "# use training_loop() from code14\n",
-    "# Resarch about Accuracy"
+    "# Resarch about Accuracy\n",
+    "\n",
+    "NetDepth_acc = training_loop(30, optimizer, NetDepth(), loss_fn, train_loader)"
    ]
   },
   {
@@ -858,14 +903,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'training_loop' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# NetRes()の学習(epoch=30)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# use training_loop() from code14\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# Resarch about Accuracy\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m NetRes_acc \u001b[38;5;241m=\u001b[39m \u001b[43mtraining_loop\u001b[49m(\u001b[38;5;241m30\u001b[39m, optimizer, NetRes(), loss_fn, train_loader)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'training_loop' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# NetRes()の学習(epoch=30)\n",
     "# use training_loop() from code14\n",
     "# Resarch about Accuracy\n",
-    "\n"
+    "\n",
+    "NetRes_acc = training_loop(30, optimizer, NetRes(), loss_fn, train_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "models = [\"NetDrop\", \"NetBatchNorm\", \"NetDepth\", \"NetRes\"]\n",
+    "accuracy = [NetDropout_acc, NetBatchNorm_acc, NetDepth_acc, NetRes_acc]\n",
+    "\n",
+    "plt.bar(models, accuracy, color=[\"r\", \"b\", \"g\", \"p\"])\n",
+    "plt.ylabel(\"Accuracy\")\n",
+    "# plt.title\n",
+    "plt.ylim(0, 1.0)\n",
+    "plt.show()"
    ]
   }
  ],
