--- a/week3.ipynb
+++ b/week3.ipynb
@@ -395,10 +395,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'nn' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# cod13\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mNet\u001b[39;00m(\u001b[43mnn\u001b[49m\u001b[38;5;241m.\u001b[39mModule):\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
+     ]
+    }
+   ],
    "source": [
+    "# cod13\n",
     "class Net(nn.Module):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
@@ -444,22 +457,43 @@
     "\n",
     "def training_loop(n_epochs, optimizer, model, loss_fn, train_loader):\n",
     "    for epoch in range(1, n_epochs+1):\n",
+    "        # ローカル変数を初期化\n",
     "        loss_train = 0.0\n",
-    "        for imgs, labells in train_loader:\n",
+    "        total_correct = 0 # Accuracy計算用\n",
+    "        total_samples = 0\n",
+    "\n",
+    "        for imgs, labels in train_loader:\n",
     "            imgs = imgs.to(device = device)\n",
     "            labels = labels.to(device = device)\n",
+    "\n",
+    "            # モデルの予測\n",
     "            outputs = model(imgs)\n",
+    "\n",
+    "            # 損失を計算\n",
     "            loss = loss_fn(outputs, labels)\n",
+    "\n",
+    "            # 勾配を更新する\n",
     "            optimizer.zero_grad()\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "\n",
+    "            # 損失の累積を取得する\n",
     "            loss_train += loss.item()\n",
+    "\n",
+    "            # 予測結果を取得する\n",
+    "            preds = outputs.argmax(dim=1)\n",
+    "            total_correct += (preds == labels).sum().item()\n",
+    "            total_samples += labels.size(0)\n",
+    "        \n",
+    "        accuracy = total_correct / total_samples\n",
+    "        loss = loss_train/len(train_loader)\n",
+    "\n",
     "        if epoch == 1 or epoch % 10 == 0:\n",
     "            print(\"{} Epoch {}, Training loss {:2f}\".format(\n",
     "                                                        datetime.datetime.now(),\n",
     "                                                        epoch, \n",
     "                                                        loss_train/len(train_loader)))\n",
-    "    return loss_train/len(train_loader)"
+    "    return accuracy, loss"
    ]
   },
   {
@@ -544,7 +578,7 @@
     "                ouputs = model(imgs)\n",
     "                _, prredicted = torch.max(outputs, dim=1)\n",
     "                total += labels.shape[0]\n",
-    "                correct += int((predictred == labels).sum())\n",
+    "                correct += int((predicted == labels).sum())\n",
     "            print(\"Accuracy{}: {:2f}\".format(name, correct/total))\n",
     "    \n",
     "validate(model, train_loader, val_loader)"
@@ -612,11 +646,18 @@
    "outputs": [],
    "source": [
     "# NetWidht()の学習(epoch=10, 20, 30)\n",
-    "# Resarch about value of loss function, train_acc and val_acc.\n",
-    "\n",
-    "NetW_e10 = training_loop(10, optimizer, NetWidth(), loss_fn, train_loader)\n",
-    "NetW_e20 = training_loop(20, optimizer, NetWidth(), loss_fn, train_loader)\n",
-    "NetW_e30 = training_loop(30, optimizer, NetWidth(), loss_fn, train_loader)"
+    "# Resarch about value of loss function, train_acc and val_acc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -668,8 +709,8 @@
     "# Net(), NetWidht()をcode18を使用してが学習(epoch=30)\n",
     "# Resarch about effect of L2 normalization\n",
     "\n",
-    "Net_l2_acc = training_loop_l2reg(30, optimizer, Net(), loss_fn, train_loader)\n",
-    "NetWidth_l2_acc = training_loop_l2reg(30, optimizer, NetWidth(), loss_fn, train_loader)"
+    "Net_l2_acc, Net_l2_loss = training_loop_l2reg(30, optimizer, Net(), loss_fn, train_loader)\n",
+    "NetWidth_l2_acc, NetWidth_l2_loss = training_loop_l2reg(30, optimizer, NetWidth(), loss_fn, train_loader)"
    ]
   },
   {
