week1の内容を出力

--- a/week1.ipynb
+++ b/week1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "3b7c576d",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "c9e9d601",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "00f74e3b",
    "metadata": {},
    "outputs": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "4f4fbe46",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "a6b53009",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "99ce346b",
    "metadata": {},
    "outputs": [
@@ -140,6 +140,14 @@
      "output_type": "stream",
      "text": [
       "tensor([0.2126, 0.7152, 0.0722], names=('channels',))\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_4646/1677095449.py:1: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at ../c10/core/TensorImpl.h:1928.)\n",
+      "  weights_names = torch.tensor([0.2126, 0.7152, 0.0722], names=['channels'])\n"
      ]
     }
    ],
@@ -150,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "6ad6600f",
    "metadata": {},
    "outputs": [
@@ -177,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "39446f74",
    "metadata": {},
    "outputs": [
@@ -205,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "cf317a22-804f-4d8a-92b9-de5579680f42",
    "metadata": {},
    "outputs": [
@@ -238,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "c14152fb-8638-4eb3-8847-a78fb773fb75",
    "metadata": {},
    "outputs": [
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "ce2e81a3-c77e-4d50-a8aa-633ed3259d3d",
    "metadata": {},
    "outputs": [
@@ -287,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "4821d3b0-80bf-4314-824b-4d465553aab3",
    "metadata": {},
    "outputs": [
@@ -310,7 +318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10212/372007168.py:2: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
+      "/tmp/ipykernel_4646/372007168.py:2: UserWarning: TypedStorage is deprecated. It will be removed in the future and UntypedStorage will be the only storage class. This should only matter to you if you are using storages directly.  To access UntypedStorage directly, use tensor.untyped_storage() instead of tensor.storage()\n",
       "  print(points.storage())\n"
      ]
     }
@@ -326,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "3e8286a9-580f-4570-9bac-4a3e59c2dfc0",
    "metadata": {},
    "outputs": [
@@ -355,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "185d7938-0da6-4dbc-8f8c-7a967c59abd3",
    "metadata": {},
    "outputs": [
@@ -371,7 +379,7 @@
       "points_offset:  0\n",
       "second_point_offset:  2\n",
       "points_storage: \n",
-      " 4.0\n",
+      "  4.0\n",
       " 1.0\n",
       " 5.0\n",
       " 3.0\n",
@@ -409,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "d7c05334-6324-4fc5-8021-27b9f847ceeb",
    "metadata": {},
    "outputs": [
@@ -446,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "id": "26faf17d-e097-400e-b337-a87c2744c9ef",
    "metadata": {},
    "outputs": [
@@ -467,7 +475,7 @@
       " 1.0\n",
       "[torch.storage.TypedStorage(dtype=torch.float32, device=cpu) of size 6]\n",
       "second_point_storage: \n",
-      "  4.0\n",
+      " 4.0\n",
       " 1.0\n",
       " 10.0\n",
       " 3.0\n",
@@ -488,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "1106e80d-867f-47f6-8cd5-b92f65ac63fe",
    "metadata": {},
    "outputs": [],
@@ -498,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "65aa2b40-a260-4635-88c5-b878182a913e",
    "metadata": {},
    "outputs": [],
@@ -509,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "7e33a206-c38b-44fe-a44e-acc7d888cd17",
    "metadata": {},
    "outputs": [
@@ -534,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "b76feffd-1d3e-4ad1-b261-3f1fe9dc5087",
    "metadata": {},
    "outputs": [
@@ -549,7 +557,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10212/892193373.py:3: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "/tmp/ipykernel_4646/892193373.py:3: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
       "  img_arr = imageio.imread(\"cat.jpeg\")\n"
      ]
     }
@@ -563,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "c75f872f-87bd-4751-89e2-948bec065fda",
    "metadata": {},
    "outputs": [
@@ -583,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "id": "b4887f59-afd2-4274-b409-bd6d9bfacc0a",
    "metadata": {},
    "outputs": [
@@ -603,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "79ca8840-0e3c-4307-9f0a-283a7997b211",
    "metadata": {},
    "outputs": [],
@@ -623,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "id": "3d8f4577-755b-407d-bbdc-b3b940a5b583",
    "metadata": {},
    "outputs": [],
@@ -638,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "id": "93577aeb-2587-479b-9abb-32929ee31d27",
    "metadata": {},
    "outputs": [
@@ -673,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "id": "01d84906-3120-412c-be3f-a7189c3b1a47",
    "metadata": {},
    "outputs": [
@@ -697,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 27,
    "id": "694499e5-52a8-4241-b93e-1f20bd8bd610",
    "metadata": {},
    "outputs": [
@@ -708,8 +716,8 @@
       "tensor([0, 1, 2, 3, 4, 5, 6, 7, 8]) tensor([[0, 1, 2],\n",
       "        [3, 4, 5],\n",
       "        [6, 7, 8]])\n",
-      "aのポインタ:  94104287304384\n",
-      "bのポインタ:  94104287304384\n",
+      "aのポインタ:  94694598468864\n",
+      "bのポインタ:  94694598468864\n",
       "aとbは同じストレージを利用している！\n"
      ]
     }
@@ -729,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 28,
    "id": "092df0be-61d4-42d9-8cb8-41ad1c2b3288",
    "metadata": {},
    "outputs": [
@@ -756,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "dfeaecb2-7330-4006-852c-c1f5c43ef1b2",
    "metadata": {},
    "outputs": [
@@ -773,11 +781,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_10212/2522578713.py:6: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "/tmp/ipykernel_4646/2522578713.py:6: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
       "  red_img = imageio.imread(\"/home/ee/ee33045l/EE4_2F-pytorch/4-2/redrose.jpeg\")\n",
-      "/tmp/ipykernel_10212/2522578713.py:7: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "/tmp/ipykernel_4646/2522578713.py:7: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
       "  blue_img = imageio.imread(\"/home/ee/ee33045l/EE4_2F-pytorch/4-2/bluerose.jpeg\")\n",
-      "/tmp/ipykernel_10212/2522578713.py:8: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "/tmp/ipykernel_4646/2522578713.py:8: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
       "  green_img = imageio.imread(\"/home/ee/ee33045l/EE4_2F-pytorch/4-2/greenrose.jpeg\")\n"
      ]
     }
@@ -799,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 30,
    "id": "1276063a-8dba-4176-9a50-611c01123773",
    "metadata": {},
    "outputs": [
@@ -839,11 +847,19 @@
     "print(\"緑の画像\")\n",
     "print(green_image_mean)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d38b015-79c2-4b14-8355-7ffe3d09236f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -857,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
