[change] それぞれのファイルを編集

--- a/week1.ipynb
+++ b/week1.ipynb
@@ -807,6 +807,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "6a6e719d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 赤色明るさ :  tensor(42.9671)\n",
+      " 青色明るさ :  tensor(48.1831)\n",
+      " 緑色明るさ :  tensor(38.9517)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/7c/s01vmy5n6s13cj9wyd5ggsgm0000gn/T/ipykernel_35428/686392741.py:4: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "  red_img = imageio.imread(\"./4-2/redrose.jpeg\")\n",
+      "/var/folders/7c/s01vmy5n6s13cj9wyd5ggsgm0000gn/T/ipykernel_35428/686392741.py:5: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "  blue_img = imageio.imread(\"./4-2/bluerose.jpeg\")\n",
+      "/var/folders/7c/s01vmy5n6s13cj9wyd5ggsgm0000gn/T/ipykernel_35428/686392741.py:6: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "  green_img = imageio.imread(\"./4-2/greenrose.jpeg\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "import imageio\n",
+    "import torch\n",
+    "\n",
+    "red_img = imageio.imread(\"./4-2/redrose.jpeg\")\n",
+    "blue_img = imageio.imread(\"./4-2/bluerose.jpeg\")\n",
+    "green_img = imageio.imread(\"./4-2/greenrose.jpeg\")\n",
+    "\n",
+    "red_tensor = torch.tensor(red_img, dtype=torch.float32)\n",
+    "blue_tensor = torch.tensor(blue_img, dtype=torch.float32)\n",
+    "green_tensor = torch.tensor(green_img, dtype=torch.float32)\n",
+    "\n",
+    "print(\" 赤色明るさ : \", red_tensor.mean())\n",
+    "print(\" 青色明るさ : \", blue_tensor.mean())\n",
+    "print(\" 緑色明るさ : \", green_tensor.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "6f6c8d21",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[R, G, B]の順で出力される。\n",
+      "赤の画像\n",
+      "[tensor(71.5677), tensor(21.9460), tensor(35.3877)]\n",
+      "-----\n",
+      "青の画像\n",
+      "[tensor(39.5279), tensor(33.9923), tensor(71.0290)]\n",
+      "-----\n",
+      "緑の画像\n",
+      "[tensor(22.2641), tensor(55.6354), tensor(38.9556)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "red_image_mean = [red_tensor[:, :, 0].mean(), red_tensor[:, :, 1].mean(), red_tensor[:, :, 2].mean()]\n",
+    "blue_image_mean = [blue_tensor[:, :, 0].mean(), blue_tensor[:, :, 1].mean(), blue_tensor[:, :, 2].mean()]\n",
+    "green_image_mean = [green_tensor[:, :, 0].mean(), green_tensor[:, :, 1].mean(), green_tensor[:, :, 2].mean()]\n",
+    "\n",
+    "print(\"[R, G, B]の順で出力される。\")\n",
+    "print(\"赤の画像\")\n",
+    "print(red_image_mean)\n",
+    "print(\"-----\")\n",
+    "\n",
+    "print(\"青の画像\")\n",
+    "print(blue_image_mean)\n",
+    "print(\"-----\")\n",
+    "\n",
+    "print(\"緑の画像\")\n",
+    "print(green_image_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "id": "1276063a-8dba-4176-9a50-611c01123773",
    "metadata": {},
